--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
         </circle>
       </g>
 
-      <!-- Hi, I'm Jason -->
+      <!-- Hi, I'm Salem -->
       <g transform="translate(10, 0)" class="msg-1">
         <rect width="133" height="42" rx="18.0355" />
-        <text x="15" y="27">Hi, I'm Jason</text>
+        <text x="15" y="27">Hi, I'm Salem</text>
       </g>
 
       <!-- typing 2 -->
@@ -216,7 +216,7 @@
       <!-- From Columbus... -->
       <g transform="translate(10, 48)" class="msg-2">
         <rect width="418" height="66.1302" rx="18.0355" />
-        <text x="15" y="27">I live in Columbus, Ohio – it’s supposed to be 79° F</text>
+        <text x="15" y="27">I live in Lagos, Nigeria where it’s supposed to be</text>
         <text x="15" y="50">(28° C) and ☀️ here today.</text>
       </g>
 
@@ -241,11 +241,9 @@
       <!-- From Columbus... -->
       <g transform="translate(10, 120)" class="msg-3">
         <rect width="430" height="66.1302" rx="18.0355" />
-        <text x="15" y="27">I’m a product designer. I used to work at GitHub,</text>
+        <text x="15" y="27">I’m a software engineer. I used to work at Sabaoth Tech,</text>
         <text x="15" y="50">
-          but I’ve been at
-          <a xlink:href="https://planetscale.com">PlanetScale</a>
-          for about 5 months now.
+          but I’ve been Open Sourcing for about 1 year now.
         </text>
       </g>
 
@@ -269,9 +267,12 @@
       <!-- Twitter -->
       <g transform="translate(10, 192)" class="msg-4">
         <rect width="473" height="42" rx="18.0355" />
-        <text x="15" y="27">
-          You can find me on Twitter at
-          <a xlink:href="https://twitter.com/jasonlong">https://twitter.com/jasonlong</a>
+        <text x="15" y="27">ght="42" rx="18.0355" class="bubble" />
+          <text x="15" y="27">
+            You can find me on
+            <a xlink:href="https://www.linkedin.com/in/salem-olorundare/">LinkedIn</a>
+            and on
+            <a xlink:href="https://twitter.com/itz-salemm">Twitter</a>
         </text>
       </g>
 
