fix workflow issue

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <!-- From Columbus... -->
       <g transform="translate(10, 120)" class="msg-3">
         <rect width="430" height="66.1302" rx="18.0355" />
-        <text x="15" y="27">I’m a software engineer. I used to work at Sabaoth Tech,</text>
+        <text x="15" y="27">I’m a software engineer. I used to work at Sabaoth,</text>
         <text x="15" y="50">
           but I’ve been Open Sourcing for about 1 year now.
         </text>
